# cfn-lint-cfn-handler

./: .actrc  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  cfn-lint-plugin-bootstrap.md  flake.nix  justfile  pyproject.toml  release-please-config.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release-please/: release-please-config.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  secure-workflows.yml
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-explore/: SKILL.md
.opencode/skills/openspec-propose/: SKILL.md
openspec/: config.yaml
openspec/changes/add-timeout-rules/: design.md  proposal.md  tasks.md
openspec/changes/add-timeout-rules/specs/cfn-handler-rules/: spec.md
openspec/changes/archive/2026-05-25-add-timeout-rules/: tasks.md
openspec/specs/cfn-handler-rules/: spec.md
src/cfn_lint_cfn_handler/: __init__.py
src/cfn_lint_cfn_handler/rules/: __init__.py  lambda_timeout.py
tests/: conftest.py  test_rule_module_invariants.py  test_smoke.py
tests/fixtures/templates/: e9101_custom_typename.yaml  e9101_does_not_trigger.yaml  e9101_external_servicetoken.yaml  e9101_no_timeout.yaml  e9101_ref_servicetoken.yaml  e9101_sam_function.yaml  e9101_sub_servicetoken.yaml  e9101_triggers.yaml  e9101_unresolvable_timeout.yaml  e9106_does_not_trigger.yaml  e9106_equal.yaml  e9106_string_servicetimeout.yaml  e9106_triggers.yaml  e9108_does_not_trigger.yaml  e9108_polling_marker.yaml  e9108_polling_marker_partial.yaml  e9108_polling_marker_template_level.yaml  e9108_triggers_absent.yaml  e9108_triggers_too_high.yaml  e9108_unresolvable_servicetimeout.yaml
tests/rules/: test_lambda_timeout.py
